# app-idea-miner

./: .cspell.json  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  railway.toml  requirements.txt  vercel.json
.claude/: settings.local.json
.codacy/: codacy.yaml
.github/workflows/: ci.yml
.history/: .env_20251231131314  .env_20251231131405  .env_20260101070105  .gitignore_20251231124252  Makefile_20251231123836  README_20251231120138.md  README_20251231123132.md  README_20251231123157.md  README_20251231171339.md  README_20251231171543.md  alembic_20251231131913.ini  alembic_20251231132011.ini  docker-compose_20251231123742.yml  docker-compose_20251231125035.yml  docker-compose_20251231125501.yml  docker-compose_20251231125508.yml  docker-compose_20251231130102.yml  docker-compose_20251231130116.yml  docker-compose_20251231130244.yml  docker-compose_20251231130332.yml  docker-compose_20251231130400.yml  docker-compose_20260101070250.yml  pyproject_20251231123458.toml
.history/.github/: copilot-instructions_20251231121143.md  copilot-instructions_20251231123245.md  copilot-instructions_20251231123258.md  copilot-instructions_20260101083942.md  copilot-instructions_20260101084413.md
.history/apps/api/: pyproject_20251231123504.toml
.history/apps/web/: index_20251231164112.html  package_20251231162652.json  tailwind.config_20251231162710.js  tailwind.config_20251231164112.js  vite.config_20251231162655.ts  vite.config_20251231173207.ts
.history/apps/worker/: __init___20251231124231.py  config_20251231124227.py  pyproject_20251231123509.toml
.history/data/: sample_posts_20251231132841.json
.history/docs/: ARCHITECTURE_20251231115712.md  ARCHITECTURE_20251231122936.md  ARCHITECTURE_20251231123005.md  ARCHITECTURE_20251231123014.md  ARCHITECTURE_20251231123028.md  CHECKLIST_20251231120657.md  CHECKLIST_20251231122001.md  CHECKLIST_20251231122012.md  CHECKLIST_20251231122018.md  CHECKLIST_20251231123059.md  CHECKLIST_20251231133322.md  CHECKLIST_20251231140422.md  CHECKLIST_20251231140441.md  CHECKLIST_20251231141859.md  CHECKLIST_20251231141937.md  CHECKLIST_20251231141951.md  CHECKLIST_20251231162003.md  CHECKLIST_20251231162151.md  CHECKLIST_20251231165641.md  DECISION_MATRIX_20251231122251.md  DEPLOYMENT_20251231171317.md  MONITORING_20251231171658.md  PHASE_4_COMPLETE_20251231162151.md  PHASE_6_COMPLETE_20251231173136.md  PHASE_6_COMPLETE_20251231173556.md  PHASE_8E_COMPLETE_20260101080946.md  PHASE_8_IMPROVEMENTS_20251231182708.md  PLAN_20251231115411.md  PLAN_20251231162652.md  RESEARCH_20251231120249.md  RESEARCH_AT_A_GLANCE_20251231122350.md  RESEARCH_INDEX_20251231122444.md  RESEARCH_RECOMMENDATIONS_2025_20251231121716.md  SCHEMA_20251231115712.md  TESTING_20251231171543.md
.history/infra/: Dockerfile_20251231123749.api  Dockerfile_20251231123831.worker  Dockerfile_20251231124334.api  Dockerfile_20251231124834.worker  Dockerfile_20251231125018.api  Dockerfile_20251231125018.worker  Dockerfile_20251231125240.api  Dockerfile_20251231125336.worker  Dockerfile_20251231130221.api  Dockerfile_20251231130244.worker  Dockerfile_20251231130553.api  Dockerfile_20251231130559.worker  Dockerfile_20251231133204.api
.history/migrations/: env_20251231131944.py  env_20251231131951.py
.history/scripts/: add_final_posts_20251231180237.py  expand_sample_data_20251231174812.py  expand_sample_data_20251231175228.py
api/: index.py  requirements.txt
apps/api/: pyproject.toml
apps/api/app/: config.py  database.py  main.py
apps/api/app/core/: auth.py  constants.py  logging_middleware.py  rate_limit.py  security.py  utils.py
apps/api/app/routers/: __init__.py  analytics.py  auth.py  bookmarks.py  clusters.py  export.py  ideas.py  jobs.py  opportunities.py  posts.py  saved_searches.py
apps/api/app/schemas/: __init__.py  analytics.py  bookmarks.py  clusters.py  common.py  ideas.py  jobs.py  opportunities.py  posts.py  saved_searches.py
apps/api/app/services/: __init__.py  analytics_service.py  bookmark_service.py  cluster_service.py  idea_service.py  opportunity_service.py  saved_search_service.py
apps/web/: .eslintrc.cjs  eslint.config.cjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/e2e/: api-contract.spec.ts  app-flows.spec.ts  cluster-explorer.spec.ts  smoke.spec.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/worker/: celery_app.py  pyproject.toml
apps/worker/sources/: base.py  hackernews.py  indiehackers.py  producthunt.py  reddit.py  rss.py
apps/worker/tasks/: __init__.py  clustering.py  ingestion.py  processing.py  saved_search_alerts.py
data/: sample_posts.json
docs/: API_SPEC.md  ARCHITECTURE.md  CHECKLIST.md  CLUSTERING.md  CONTEXT_MENU_GUIDE.md  COPILOT_INSTRUCTIONS_UPDATE.md  MVP_COMPLETE.md  NEXT_STEPS.md  OVERVIEW.md  PHASE_8E_TESTING.md  PLAN.md  QUICK_START_IMPROVEMENTS.md  RESEARCH_SUMMARY.md  STRUCTURE.md  SUMMARY.md  TESTING.md
docs/assets/: README.md
infra/: .dockerignore
infra/postgres/: init.sql
migrations/versions/: 61740c862ce0_initial_schema.py  9e4a8f2b8d11_add_bookmarks_table.py  a1b2c3d4e5f6_add_users_table.py  b7d12e9a4f3c_bookmarks_user_fk.py  c2f8d9ab41de_add_saved_searches_table.py  d1e2f3a4b5c6_update_vector_dimensions.py  e3f4a5b6c7d8_add_competitors_field.py  f4a5b6c7d8e9_add_webhook_fields.py  f6e39222109b_add_vector_columns.py  g5h6i7j8k9l0_add_aspect_sentiments.py
scripts/: add_final_posts.py  expand_sample_data.py  test_producthunt_source.py  test_reddit_source.py  verify_ingestion.py  verify_vector_search.py
tests/: conftest.py  test_api_analytics.py  test_api_auth.py  test_api_bookmarks.py  test_api_clusters.py  test_api_ideas.py  test_api_posts.py  test_api_saved_searches.py  test_bookmark_constraints.py  test_models.py  test_security.py
tests/unit/: test_cache.py  test_cluster_service.py  test_clustering.py  test_dedupe.py  test_idea_service.py  test_nlp.py  test_sources.py
thoughts/ledgers/: CONTINUITY_CLAUDE-security-audit.md
(+245 files in other folders)
