[project]
name = "app-idea-miner"
version = "0.1.0"
description = "Intelligent opportunity detection platform for discovering app ideas"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Elizabeth Stein", email = "elizabeth@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "aiohttp>=3.13.4",
    "alembic>=1.18.0",
    "asyncpraw>=7.8.1",
    "beautifulsoup4>=4.14.3",
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.12.1",
    "sentence-transformers>=5.3.0",
    "tornado>=6.5.5",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/worker",
    "packages/core"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.0",
    "pre-commit>=4.0.0",
    "httpx>=0.28.0",
    "fastapi>=0.129.0",
    "pydantic-settings>=2.13.0",
    "redis>=7.2.0",
    "sqlalchemy>=2.0.46",
    "asyncpg>=0.30.0",
    "celery>=5.6.0",
    "scikit-learn>=1.5.0",
    "numpy>=2.4.0",
    "pandas>=2.3.0",
    "hdbscan>=0.8.0",
    "nltk>=3.9.0",
    "vaderSentiment>=3.3.2",
    "greenlet>=3.3.0",
    "alembic>=1.18.0",
    "feedparser>=6.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".history", ".venv", "node_modules"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "UP006", # use list/dict instead of List/Dict (legacy types)
    "E712",  # comparison to True/False (SQLAlchemy/Pandas)
    "F403",  # star imports (legacy structure)
    "B904",  # raise from (exception chaining)
    "C416",  # unnecessary comprehension
    "E741",  # ambiguous variable name
    "F841",  # unused variable
    "B905",  # zip strict
    "E402",  # import not at top
    "F401",  # unused import
    "W293",  # whitespace in blank line
    "C401",  # generator comprehension
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
# Coverage is opt-in: run with `make test` (which passes --cov) or
# `pytest --cov=apps --cov=packages` manually.  Plain `pytest` works without
# pytest-cov being on PATH, which avoids "unrecognized arguments" errors in
# environments where only the venv python is available.
addopts = "-v -p no:cov"
