[project]
name = "api"
version = "0.1.0"
description = "FastAPI backend service for App-Idea Miner"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.13.0",
    "sqlalchemy>=2.0.46",
    "alembic>=1.18.0",
    "asyncpg>=0.30.0",
    "redis>=7.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "slowapi>=0.1.9",
    "websockets>=15.0",
    "pgvector>=0.4.0",
]
